@@ -1,0 +1,3 @@
+package TestCase::CompileError::Package::packagePartNameStartWithUpperCase {
+  
+}
